# InteractiveArgparse

./: CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  release.yml
docs/: persistence.md  prompters.md  subparsers.md
docs/decisions/: 0001-default-terminal-prompter.md
examples/: decorator.py  persist_answers.py  rich.py  rich_prompter.py  simple.py  subparsers.py  web.py
interactive_argparse/: __init__.py
interactive_argparse/parse/: __init__.py  interactive_parser.py  prompter.py  pyinquirer_prompter.py  question.py  rich_prompter.py  web_prompter.py
tests/: helpers.py  test_interactive_parser.py  test_prompter.py  test_pyinquirer_prompter.py  test_question.py  test_rich_prompter.py  test_web_prompter.py
