[metadata]
# replace with your username:
name = InteractiveArgparse
version = 0.0.1
author = Miki Mendelson-Mints
author_email = mikimn1999@gmail.com
description = Effortlessly turn any ArgumentParser script into an interactive prompt.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikimn/InteractiveArgparse
project_urls =
    Bug Tracker = https://github.com/mikimn/InteractiveArgparse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
web = pywebio<1.8.4  # 1.8.4 uses `list[str]` internally, which needs Python 3.9+
